--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "homepage": "https://github.com/carforyou/carforyou-next-page-bundlesize-pkg#readme",
   "devDependencies": {
+    "@babel/core": "^7.14.6",
     "@carforyou/eslint-config": "3.1.7",
     "@pika/pack": "^0.5.0",
     "@pika/plugin-build-node": "^0.9.0",
