--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "@carforyou/example",
+  "name": "@carforyou/next-page-bundlesize",
   "version": "0.0.0",
-  "description": "Example package",
+  "description": "Page-level bundlesize check for next.js",
   "scripts": {
     "version": "npm run build",
     "build": "pika build",
     "lint": "eslint --ext ts,js,tsx,jsx,json .",
     "format": "npm run lint -- --fix",
     "typecheck": "tsc --noEmit",
-    "test": "jest",
-    "test:debug": "node --inspect-brk --inspect=127.0.0.1:9229 ./node_modules/jest/bin/jest.js --runInBand"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/carforyou/carforyou-example-pkg.git"
+    "url": "git+https://github.com/carforyou/carforyou-next-page-bundlesize-pkg.git"
   },
   "author": "CAR FOR YOU",
   "license": "MIT",
-  "homepage": "https://github.com/carforyou/example-pkg#readme",
+  "homepage": "https://github.com/carforyou/carforyou-next-page-bundlesize-pkg#readme",
   "devDependencies": {
+    "@babel/core": "^7.14.6",
     "@carforyou/eslint-config": "3.1.7",
     "@pika/pack": "^0.5.0",
     "@pika/plugin-build-node": "^0.9.0",
-    "@pika/plugin-build-web": "^0.9.0",
+    "@pika/plugin-simple-bin": "^0.9.2",
     "@pika/plugin-ts-standard-pkg": "^0.9.0",
     "@types/jest": "^26.0.10",
     "jest": "^27.0.0",
@@ -42,15 +42,18 @@
         }
       ],
       [
-        "@pika/plugin-build-web"
+        "@pika/plugin-build-node"
       ],
       [
-        "@pika/plugin-build-node"
+        "@pika/plugin-simple-bin",
+        {
+          "bin": "next-page-bundlesize"
+        }
       ]
     ]
   },
   "dependencies": {
-    "@types/node": "^14.14.31",
-    "es-abstract": "^1.18.0-next.1"
+    "bundlesize": "^0.18.1",
+    "yargs": "^17.0.1"
   }
 }
