--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@pika/plugin-simple-bin": "^0.9.2",
     "@pika/plugin-ts-standard-pkg": "^0.9.0",
     "@types/jest": "^26.0.10",
+    "aws-sdk": "2.1038.0",
     "jest": "^27.0.0",
     "semantic-release": "^17.0.3",
     "ts-jest": "^27.0.0",
