--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ node_modules
 src/__tests__/.next/next-page-bundlesize.config.json
 src/__tests__/.next/.bundlesize*
 src/__tests__/.next/new-master-config.json
+src/__tests__/.next/bundlesize.json
