--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es2020",
     "module": "esnext",
+    "target": "esnext",
     "moduleResolution": "node",
-    "esModuleInterop": true
+    "lib": ["esnext", "dom"],
+    "declaration": true,
+    "esModuleInterop": true,
+    "sourceMap": true
   },
   "include": ["src"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "pkg"]
 }
