--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Page-level bundlesize check for next.js",
   "scripts": {
     "version": "npm run build",
-    "build": "pika build",
+    "build": "rimraf pkg && tsc --outDir pkg",
     "lint": "eslint --ext ts,js,tsx,jsx,json .",
     "format": "npm run lint -- --fix",
     "typecheck": "tsc --noEmit",
@@ -20,41 +20,22 @@
   "devDependencies": {
     "@babel/core": "7.16.7",
     "@carforyou/eslint-config": "4.0.4",
-    "@pika/pack": "0.5.0",
-    "@pika/plugin-build-node": "0.9.2",
-    "@pika/plugin-simple-bin": "0.9.2",
-    "@pika/plugin-ts-standard-pkg": "0.9.2",
     "@types/jest": "27.4.0",
     "bytes": "3.1.1",
     "jest": "27.4.7",
+    "rimraf": "3.0.2",
     "semantic-release": "18.0.1",
     "ts-jest": "27.1.2",
     "typescript": "4.5.4"
   },
-  "publishConfig": {
-    "access": "public"
-  },
-  "@pika/pack": {
-    "pipeline": [
-      [
-        "@pika/plugin-ts-standard-pkg",
-        {
-          "tsconfig": "tsconfig.pika.json"
-        }
-      ],
-      [
-        "@pika/plugin-build-node"
-      ],
-      [
-        "@pika/plugin-simple-bin",
-        {
-          "bin": "next-page-bundlesize"
-        }
-      ]
-    ]
-  },
   "dependencies": {
     "bundlesize": "0.18.1",
     "yargs": "17.3.1"
-  }
+  },
+  "bin" : {
+    "next-page-bundlesize": "./pkg/index.js"
+  },
+  "files": [
+    "pkg/**/*"
+  ]
 }
