--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "jest": "29.0.2",
     "rimraf": "3.0.2",
     "semantic-release": "19.0.5",
-    "ts-jest": "28.0.8",
+    "ts-jest": "29.0.0-next.1",
     "typescript": "4.8.2"
   },
   "dependencies": {
